test_suite5/ALAN/test_suite/alan-2022-examples/failing/005170_mutation.alan
source M begin leave mcf1a G := 88 wri end
